Asistencia a eventos funcionando.

--- a/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/Details.cshtml
@@ -16,153 +16,164 @@
     }
     <div class="card-content white-text">
 
-            <div class="row">
-                <div class="col s12 m8 left-align">
-                    <a href="~/Users/Details/@Model.ViewModel.IdUser">
-                        <div class="chip">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRx-XTtpVFr21gRcxHk_D2ZoENOxFxtVFKVIe9Wpf61P93ERViS" alt="Contact Person">
-                            @Html.getNameUser(id: @Html.DisplayFor(modelItem => Model.ViewModel.IdUser).ToString())
-                        </div>
-                    </a>
-                </div>
-                <div class="col s12 m4 right-align">
-                    <span class="card-info card-event-detail-info"><i class="@Html.getIcon(@Html.DisplayFor(modelItem => Model.ViewModel.IdCategoria).ToString())"></i> @Html.DisplayFor(modelItem => Model.ViewModel.IdCategoria) </span>
-                </div>
+        <div class="row">
+            <div class="col s12 m8 left-align">
+                <a href="~/Users/Details/@Model.ViewModel.IdUser">
+                    <div class="chip">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRx-XTtpVFr21gRcxHk_D2ZoENOxFxtVFKVIe9Wpf61P93ERViS" alt="Contact Person">
+                        @Html.getNameUser(id: @Html.DisplayFor(modelItem => Model.ViewModel.IdUser).ToString())
+                    </div>
+                </a>
             </div>
+            <div class="col s12 m4 right-align">
+                <span class="card-info card-event-detail-info"><i class="@Html.getIcon(@Html.DisplayFor(modelItem => Model.ViewModel.IdCategoria).ToString())"></i> @Html.DisplayFor(modelItem => Model.ViewModel.IdCategoria) </span>
 
-            <span class="card-title text-darken-4">@Html.DisplayFor(modelItem => Model.ViewModel.NombreEvento)</span>
-            <p class="card-subtitle text-darken-2">@Html.DisplayFor(modelItem => Model.ViewModel.Descripcion)</p>
-            <hr />
-
-            <!-- IdUser -->
-
-            <div class="row card-row">
-                <div class="col s12 m6">
-                    @if (Model.ViewModel.FechaFin == Model.ViewModel.FechaInicio)
-                    {
-                        <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.FechaInicio)</span>
-                    }
-                    else
-                    {
-                        <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.FechaInicio) al @Html.DisplayFor(modelItem => Model.ViewModel.FechaFin)</span>
-                    }
-
-                </div>
-                <div class="col s12 m6 right-align">
-                    <span class="card-info card-event-detail-info">
-                        <i class="fa fa-clock-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.HoraInicio) - @Html.DisplayFor(modelItem => Model.ViewModel.HoraFin)
-                    </span>
-                </div>
             </div>
+        </div>
 
-            <div class="row card-row">
-                <div class="col s12 m6">
-                    <span class="card-info card-event-detail-info"><i class="fa fa-address-card-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.Direccion)</span>
-                </div>
-                <!--<div class="col s12 m6">
-                <span class="card-info card-event-detail-info">12.00 €</span>
-            </div>-->
-            </div>
-            <hr />
+        <span class="card-title text-darken-4">@Html.DisplayFor(modelItem => Model.ViewModel.NombreEvento)</span>
+        <p class="card-subtitle text-darken-2">@Html.DisplayFor(modelItem => Model.ViewModel.Descripcion)</p>
+        <hr />
 
-            <div id="map" style="width:100%;height:300px;"></div>
-            <hr />
+        <!-- IdUser -->
 
-            @if (Model.ViewModel.FechaFin < DateTime.Now)
-            {
-                if (Model.Puntuacion > 0)
+        <div class="row card-row">
+            <div class="col s12 m6">
+                @if (Model.ViewModel.FechaFin == Model.ViewModel.FechaInicio)
                 {
-                    <h4>Usted ha puntuado este evento con @Model.Puntuacion estrellas</h4>
+                    <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.FechaInicio)</span>
                 }
                 else
                 {
-                    <fieldset class="rating">
-                        <legend>¿Qué le pareció el evento?</legend>
-                        <input type="radio" id="star5" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 5)" /><label for="star5" title="Increíble!"></label>
-                        <input type="radio" id="star4" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 4)" /><label for="star4" title="Muy bueno"></label>
-                        <input type="radio" id="star3" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 3)" /><label for="star3" title="Bueno"></label>
-                        <input type="radio" id="star2" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 2)" /><label for="star2" title="Regular"></label>
-                        <input type="radio" id="star1" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 1)" /><label for="star1" title="Una pérdida de tiempo"></label>
-                    </fieldset>
+                    <span class="card-info card-event-detail-info"><i class="fa fa-calendar-times-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.FechaInicio) al @Html.DisplayFor(modelItem => Model.ViewModel.FechaFin)</span>
                 }
-            }
-            <br />
-            <br />
-            <br />
-            <br />
 
+            </div>
+            <div class="col s12 m6 right-align">
+                <span class="card-info card-event-detail-info">
+                    <i class="fa fa-clock-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.HoraInicio) - @Html.DisplayFor(modelItem => Model.ViewModel.HoraFin)
+                </span>
+            </div>
+        </div>
+
+        <div class="row card-row">
+            <div class="col s12 m6">
+                <span class="card-info card-event-detail-info"><i class="fa fa-address-card-o"></i> @Html.DisplayFor(modelItem => Model.ViewModel.Direccion)</span>
+            </div>
+            <!--<div class="col s12 m6">
+                <span class="card-info card-event-detail-info">12.00 €</span>
+            </div>-->
+        </div>
+        <hr />
+
+        <div id="map" style="width:100%;height:300px;"></div>
+        <hr />
+
+
+        <div class="row">
+            <div class="col s6 m6 left-align">
+                @if (Model.ViewModel.FechaFin < DateTime.Now)
+                {
+                    if (Model.Puntuacion > 0)
+                    {
+                        <h5>Usted ha puntuado este evento con @Model.Puntuacion estrellas</h5>
+                    }
+                    else
+                    {
+                        <fieldset class="rating">
+                            <legend>¿Qué le pareció el evento?</legend>
+                            <input type="radio" id="star5" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 5)" /><label for="star5" title="Increíble!"></label>
+                            <input type="radio" id="star4" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 4)" /><label for="star4" title="Muy bueno"></label>
+                            <input type="radio" id="star3" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 3)" /><label for="star3" title="Bueno"></label>
+                            <input type="radio" id="star2" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 2)" /><label for="star2" title="Regular"></label>
+                            <input type="radio" id="star1" name="rating" onclick="EnviarPuntuacion(@Model.ViewModel.Id, 1)" /><label for="star1" title="Una pérdida de tiempo"></label>
+                        </fieldset>
+                    }
+                }
+            </div>
+
+            <div id="AsistenciasDiv">
+                @Html.Action("AsistenciaEvento", "Events", new { IDEvento = Model.ViewModel.Id })
+            </div>
+            
+        </div>
+
+            <br />
+            <br />
+            <br />
+            <br />
 
             <div class="right-align">
                 <i class="fa fa-flag-o"></i>
                 @Html.ActionLink("Reportar", "ReportarEvento", new { id = Model.ViewModel.Id })
             </div>
         </div>
-</div>
-
-
-
-
-@*<!-- Modal Trigger -->
-<a class="waves-effect waves-light btn" href="#modal1">Comentar</a>
-
-<!-- Modal Structure -->
-<div id="modal1" class="modal">
-    <div class="modal-content">
-        <div class="input-field col s12">
-            <textarea id="textarea1" class="materialize-textarea"></textarea>
-            <label for="textarea1">Comentario</label>
         </div>
-    </div>
-    <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Aceptar</a>
-    </div>
-</div>
 
-<script>
-    $(document).ready(function(){
-        // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-        $('.modal').modal();
-    });
-</script>
 
-@*
-    @foreach (var a in Model.Comments)
-    {
-        <div class="row">
-            <div class="col s12 m12">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <p>
-                            @a.Comentario
-                        </p>
+
+
+        @*<!-- Modal Trigger -->
+            <a class="waves-effect waves-light btn" href="#modal1">Comentar</a>
+
+            <!-- Modal Structure -->
+            <div id="modal1" class="modal">
+                <div class="modal-content">
+                    <div class="input-field col s12">
+                        <textarea id="textarea1" class="materialize-textarea"></textarea>
+                        <label for="textarea1">Comentario</label>
                     </div>
                 </div>
+                <div class="modal-footer">
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Aceptar</a>
+                </div>
             </div>
+
+            <script>
+                $(document).ready(function(){
+                    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+                    $('.modal').modal();
+                });
+            </script>
+
+            @*
+                @foreach (var a in Model.Comments)
+                {
+                    <div class="row">
+                        <div class="col s12 m12">
+                            <div class="card blue-grey darken-1">
+                                <div class="card-content white-text">
+                                    <p>
+                                        @a.Comentario
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }*@
+
+        <div id="comentariosDiv">
+            @Html.Action("GetEventCommets", "Events", new { IdEvento = Model.ViewModel.Id })
         </div>
-    }*@
-
-<div id="comentariosDiv">
-    @Html.Action("GetEventCommets", "Events", new { IdEvento = Model.ViewModel.Id })
-</div>
 
 
-<!--Hay que ver que sea el usuario que lo creo o algún administrador-->
-@if (WebSecurity.IsAuthenticated)
-{
-    <div class="fixed-action-btn">
-        <a class="btn-floating btn-large green" href="~/Events/Edit/@Model.ViewModel.Id">
-            <i class="large material-icons">mode_edit</i>
-        </a>
-    </div>
-}
+        <!--Hay que ver que sea el usuario que lo creo o algún administrador-->
+        @if (WebSecurity.IsAuthenticated)
+        {
+            <div class="fixed-action-btn">
+                <a class="btn-floating btn-large green" href="~/Events/Edit/@Model.ViewModel.Id">
+                    <i class="large material-icons">mode_edit</i>
+                </a>
+            </div>
+        }
 
 
-@* ------------------------------------------------------------------------------------------------------------ *@
+        @* ------------------------------------------------------------------------------------------------------------ *@
 
 
 
 
-<script>
+        <script>
     // Note: This example requires that you consent to location sharing when
     // prompted by your browser. If you see the error "The Geolocation service
     // failed.", it means you probably did not give permission for the browser to
@@ -200,75 +211,95 @@
         //-----------------------------------------------------------------------
     }
 
-</script>
+        </script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
-
-
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPHbsGCp8vpDA1vMKAFWsU0Odc8Mz5SAA&callback=initMap" async defer></script>
 
 
-@* ------------------------------------------------------------------------------------------------------------------------------------------------------ *@
 
 
-<script>
-    $(document).on("submit", "#commentForm", function (e) {
-        e.preventDefault();
-        $.ajax({
-            url: this.action,
-            type: this.method,
-            data: $(this).serialize(),
-            beforeSend: function () {
-                $("#commentForm *").prop("disabled", true);
-            },
-            success: function (result) {
-                if (result.includes("loginForm")) {
-                    window.location.replace("/Home/Login");
-                } else {
-                    var reloadDiv = "comentariosDiv"
-                    $("#" + reloadDiv).html(result);
-                    $('#Comment').val("");
-                }
-                
+        @* ------------------------------------------------------------------------------------------------------------------------------------------------------ *@
+
+
+        <script>
+            $(document).on("submit", "#commentForm", function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: this.action,
+                    type: this.method,
+                    data: $(this).serialize(),
+                    beforeSend: function () {
+                        $("#commentForm *").prop("disabled", true);
+                    },
+                    success: function (result) {
+                        if (result.includes("loginForm")) {
+                            window.location.replace("/Home/Login");
+                        } else {
+                            var reloadDiv = "comentariosDiv"
+                            $("#" + reloadDiv).html(result);
+                            $('#Comment').val("");
+                        }
+
+                    }
+                });
+            });
+
+
+            function responderComentario(id) {
+                var url = '/Comments/ResponderComentarios'
+                $.ajax({
+                    url: url,
+                    type: "GET",
+                    data: { 'Commentid': id },
+                    dataType: 'text',
+                    success: function (result) {
+                        if (result.includes("loginForm")) {
+                            window.location.replace("/Home/Login");
+                        } else {
+                            $("#comment" + id).append(result);
+                        }
+                    }
+                });
             }
-        });
-    });
 
 
-    function responderComentario(id)
-    {
-        var url = '/Comments/ResponderComentarios'
-        $.ajax({
-            url: url,
-            type: "GET",
-            data: { 'Commentid': id },
-            dataType: 'text',
-            success: function (result) {
-                if (result.includes("loginForm")) {
-                    window.location.replace("/Home/Login");
-                } else {
-                    $("#comment" + id).append(result);
-                }
+            function EnviarPuntuacion(id, Puntuacion) {
+                var url = '/Events/PuntuarEvento'
+                $.ajax({
+                    url: url,
+                    type: "POST",
+                    data: {
+                        'Id': id, 'Puntuacion': Puntuacion
+                    },
+                    dataType: 'text',
+                    success: function (result) {
+                        if (result.includes("loginForm")) {
+                            window.location.replace("/Home/Login");
+                        } else {
+                            window.location.reload();
+                        }
+                    }
+                });
             }
-        });
-    }
 
 
-    function EnviarPuntuacion(id, Puntuacion) {
-        var url = '/Events/PuntuarEvento'
-        $.ajax({
-            url: url,
-            type: "POST",
-            data: {
-                'Id': id, 'Puntuacion' : Puntuacion},
-            dataType: 'text',
-            success: function (result) {
-                if (result.includes("loginForm")) {
-                    window.location.replace("/Home/Login");
-                } else {
-                    window.location.reload();
-                }
+            function EnviarAsistencia(id) {
+                var url = '/Events/EnviarInteres'
+                $.ajax({
+                    url: url,
+                    type: "POST",
+                    data: {
+                        'id': id
+                    },
+                    dataType: 'text',
+                    success: function (result) {
+                        if (result.includes("loginForm")) {
+                            window.location.replace("/Home/Login");
+                        } else {
+                            $("#AsistenciasDiv").replaceWith(result);
+                        }
+                    }
+                });
             }
-        });
-    }
 
-</script>
+        </script>
