--- a/GlobalEvents/GlobalEvents/Views/Events/AsistenciaEvento.cshtml
+++ b/GlobalEvents/GlobalEvents/Views/Events/AsistenciaEvento.cshtml
@@ -2,24 +2,41 @@
 
 @using (Html.BeginForm("EnviarInteres", "Events", FormMethod.Post, new { id = "commentForm" }))
 {
-    <div class="col s12 m12 right-align">
-        @if (Model.FechaFin > DateTime.Now)
-        {
-            if (Model.InteresUsuario.IdInteres == 0)
-            {
-                <a class="waves-effect waves-light btn blue" onclick="EnviarAsistencia(@Model.IdEvento)"><i class="material-icons left">done</i>Asistiré</a>
-            }
-            if (Model.InteresUsuario.IdInteres > 0)
-            {
-                <a class="waves-effect waves-light btn blue" onclick="EnviarAsistencia(@Model.IdEvento)"><i class="material-icons left">done</i>No Asistiré</a>
-            }
-        }
-    </div>
-
     <div class="row">
-        <div class="col s11 m11 right-align">
-            <h5 id="CantAsistencias"> @Model.Asistencias</h5>
+        <div class="col s10 m10 right-align">
+            @if (Model.FechaFin > DateTime.Now)
+            {
+                if (Model.InteresUsuario.Tipo != RepositorioClases.Intereses.Asistire)
+                {
+                    if (Model.InteresUsuario.IdInteres == 0 || Model.InteresUsuario.IdInteres > 0 && Model.InteresUsuario.Tipo == RepositorioClases.Intereses.Asistire)
+                    {
+                    <a class="waves-effect waves-light btn blue" onclick="EnviarAsistencia(@Model.IdEvento, 2)"><i class="material-icons left">thumb_up</i>Me Interesa</a> 
+                    }
+                    if (Model.InteresUsuario.IdInteres > 0 && Model.InteresUsuario.Tipo == RepositorioClases.Intereses.Me_Gusta)
+                    {
+                    <a class="waves-effect waves-light btn blue" onclick="EnviarAsistencia(@Model.IdEvento, 2)"><i class="material-icons left">thumb_down</i>No me Interesa</a>
+                    }
+                }
+            }
+            <h6 id="CantAsistencias"> Le Interesa: @Model.Interesados</h6>
         </div>
     </div>
+    <div class="row">
+        <div class="col s10 m10 right-align">
+            @if (Model.FechaFin > DateTime.Now)
+            {
+                if (Model.InteresUsuario.IdInteres == 0 || Model.InteresUsuario.IdInteres > 0 && Model.InteresUsuario.Tipo == RepositorioClases.Intereses.Me_Gusta)
+                {
+                    <a class="waves-effect waves-light btn blue" onclick="EnviarAsistencia(@Model.IdEvento, 1)"><i class="material-icons left">done</i>Asistiré</a>
+                }
+                if (Model.InteresUsuario.IdInteres > 0 && Model.InteresUsuario.Tipo == RepositorioClases.Intereses.Asistire)
+                {
+                    <a class="waves-effect waves-light btn blue" onclick="EnviarAsistencia(@Model.IdEvento, 1)"><i class="material-icons left">done</i>No Asistiré</a>
+                }
+            }
+            <h6 id="CantAsistencias"> Asistirán: @Model.Asistencias</h6>
+        </div>
+    </div>
+
 }
 
